Update line endings settings in .gitattributes

--- a/html/gshop.html
+++ b/html/gshop.html
@@ -23,7 +23,8 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-        <a class="navbar-brand d-lg-none  giua" href="../index.html"><img src="../images/logo.png" width="50" height="50"></a>
+        <a class="navbar-brand d-lg-none  giua" href="../index.html"><img src="../images/logo.png" width="50"
+                height="50"></a>
         <!--anh khi thu nho trinh duyet-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbarToggler7"
             aria-controls="myNavbarToggler7" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,7 +41,8 @@
                 <li class="nav-item">
                     <a class="nav-link " href="./Promotional.html">Khuyến mãi G</a>
                 </li>
-                <a class="d-none d-lg-block" href="../index.html"><img src="../images/logo.png" width="50" height="50"></a>
+                <a class="d-none d-lg-block" href="../index.html"><img src="../images/logo.png" width="50"
+                        height="50"></a>
                 <!--anh phong to-->
                 <li class="nav-item">
                     <a class="nav-link text-light" href="./gshop.html">Cửa hàng G</a>
@@ -52,14 +54,14 @@
                     <a class="nav-link" href="./introduce.html">3F Plus</a>
                 </li>
                 <li class="nav-item icon">
-                       <a href="https://www.youtube.com/embed/H2OzViHWF40">
-                    <i class="ti-youtube"></i>
-                </a>
+                    <a href="https://www.youtube.com/embed/H2OzViHWF40">
+                        <i class="ti-youtube"></i>
+                    </a>
                     <span>
                         <a href="https://www.facebook.com/gkitchenvn/?modal=admin_todo_tour">
                             <i class="ti-facebook"></i>
                         </a>
-                       
+
                     </span>
                 </li>
 
@@ -404,10 +406,10 @@
                     <option value="8">Quận 7</option>
 
                 </select>
-                <iframe <iframe
+                <!-- <iframe <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2597.083658271292!2d105.86105096412325!3d20.94233509913465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135adc362c80ccb%3A0xd6b5a1cf28a9cfee!2zTmjDoCB0aOG7nSBnacOhbyB44bupIMSQ4buTbmcgVHLDrA!5e0!3m2!1svi!2s!4v1652972904110!5m2!1svi!2s"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    referrerpolicy="no-referrer-when-downgrade"></iframe> -->
             </div>
         </div>
 
