--- a/user/home.html
+++ b/user/home.html
@@ -101,7 +101,7 @@
                         <div class="dropdown mt-2">
                             <a class="btn dropdown-toggle bg-success" href="#" role="button" id="dropdownMenuLink"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                <span class="name">Thai</span>
+                                <span class="name">Hoang</span>
                             </a>
                             <ul class="dropdown-menu  " aria-labelledby="dropdownMenuLink">
                                 <li><a class="dropdown-item" href="./accountmanagement.html">Thông tin tài khoản</a>
